@@ -63,75 +63,76 @@ signal respectively. </dd>
 and the CONT signal. Do not restart the service. If the service is down,
 and no log service exists, <i><b>runsv</b>(8)</i> exits. If the service is down and a
 log service exists, <i><b>runsv</b>(8)</i> closes the standard input of the log service
-and waits for it to terminate. If the log service is down, <i><b>runsv</b>(8)</i> exits.
-This command is ignored if it is given to an appendant log service. </dd>
+and waits for it to terminate. No more commands will be processed. If the
+log service is down, <i><b>runsv</b>(8)</i> exits. This command is ignored if it is given
+to an appendant log service. </dd>
 </dl>
 <p>
-<b>sv</b> actually
-looks only at the first character of these <i>command</i>s. 
-<h3><a name='sect4'>Commands compatible
-to LSB init script actions</a></h3>
+<b>sv</b> actually looks only at the first character
+of these <i>command</i>s. 
+<h3><a name='sect4'>Commands compatible to LSB init script actions</a></h3>
 
 <dl>
 
-<dt><b>status</b> </dt>
+<dt><b>status</b>
+</dt>
 <dd>Same as <i>status</i>. </dd>
 
 <dt><b>start</b> </dt>
-<dd>Same as <i>up</i>, but wait
-up to 7 seconds for the command to take effect. Then report the status or
-timeout. If the script <i>./check</i> exists in the service directory, <b>sv</b> runs this
-script to check whether the service is up and available; it&rsquo;s considered
-to be available if <i>./check</i> exits with 0. </dd>
+<dd>Same as <i>up</i>, but wait up to 7 seconds for the command
+to take effect. Then report the status or timeout. If the script <i>./check</i> exists
+in the service directory, <b>sv</b> runs this script to check whether the service
+is up and available; it&rsquo;s considered to be available if <i>./check</i> exits with
+0. </dd>
 
 <dt><b>stop</b> </dt>
-<dd>Same as <i>down</i>, but wait up to
-7 seconds for the service to become down. Then report the status or timeout.
-</dd>
+<dd>Same as <i>down</i>, but wait up to 7 seconds for the service to become
+down. Then report the status or timeout. </dd>
 
 <dt><b>reload</b> </dt>
-<dd>Same as <i>hup</i>, and additionally report the status afterwards. </dd>
+<dd>Same as <i>hup</i>, and additionally
+report the status afterwards. </dd>
 
-<dt><b>restart</b>
-</dt>
-<dd>Send the commands <i>term</i>, <i>cont</i>, and <i>up</i> to the service, and wait up to 7 seconds
-for the service to restart. Then report the status or timeout. If the script
-<i>./check</i> exists in the service directory, <b>sv</b> runs this script to check whether
-the service is up and available again; it&rsquo;s considered to be available if
-<i>./check</i> exits with 0. </dd>
+<dt><b>restart</b> </dt>
+<dd>Send the commands <i>term</i>, <i>cont</i>, and
+<i>up</i> to the service, and wait up to 7 seconds for the service to restart.
+Then report the status or timeout. If the script <i>./check</i> exists in the service
+directory, <b>sv</b> runs this script to check whether the service is up and available
+again; it&rsquo;s considered to be available if <i>./check</i> exits with 0. </dd>
 
 <dt><b>shutdown</b> </dt>
-<dd>Same as <i>exit</i>, but wait up to 7 seconds for
-the <i><b>runsv</b>(8)</i> process to terminate. Then report the status or timeout. </dd>
+<dd>Same
+as <i>exit</i>, but wait up to 7 seconds for the <i><b>runsv</b>(8)</i> process to terminate.
+Then report the status or timeout. </dd>
 
-<dt><b>force-stop</b>
-</dt>
-<dd>Same as <i>down</i>, but wait up to 7 seconds for the service to become down. Then
-report the status, and on timeout send the service the <i>kill</i> command. </dd>
+<dt><b>force-stop</b> </dt>
+<dd>Same as <i>down</i>, but wait up to
+7 seconds for the service to become down. Then report the status, and on
+timeout send the service the <i>kill</i> command. </dd>
 
-<dt><b>force-reload</b>
-</dt>
-<dd>Send the service the <i>term</i> and <i>cont</i> commands, and wait up to 7 seconds for
-the service to restart. Then report the status, and on timeout send the
-service the <i>kill</i> command. </dd>
+<dt><b>force-reload</b> </dt>
+<dd>Send the service
+the <i>term</i> and <i>cont</i> commands, and wait up to 7 seconds for the service to
+restart. Then report the status, and on timeout send the service the <i>kill</i>
+command. </dd>
 
 <dt><b>force-restart</b> </dt>
-<dd>Send the service the <i>term</i>, <i>cont</i> and
-<i>up</i> commands, and wait up to 7 seconds for the service to restart. Then report
-the status, and on timeout send the service the <i>kill</i> command. If the script
-<i>./check</i> exists in the service directory, <b>sv</b> runs this script to check whether
-the service is up and available again; it&rsquo;s considered to be available if
-<i>./check</i> exits with 0. </dd>
+<dd>Send the service the <i>term</i>, <i>cont</i> and <i>up</i> commands, and
+wait up to 7 seconds for the service to restart. Then report the status,
+and on timeout send the service the <i>kill</i> command. If the script <i>./check</i> exists
+in the service directory, <b>sv</b> runs this script to check whether the service
+is up and available again; it&rsquo;s considered to be available if <i>./check</i> exits
+with 0. </dd>
 
 <dt><b>force-shutdown</b> </dt>
-<dd>Same as <i>exit</i>, but wait up to 7 seconds
-for the <i><b>runsv</b>(8)</i> process to terminate. Then report the status, and on timeout
-send the service the <i>kill</i> command. </dd>
+<dd>Same as <i>exit</i>, but wait up to 7 seconds for the <i><b>runsv</b>(8)</i>
+process to terminate. Then report the status, and on timeout send the service
+the <i>kill</i> command. </dd>
 
 <dt><b>try-restart</b> </dt>
-<dd>if the service is running,
-send it the <i>term</i> and <i>cont</i> commands, and wait up to 7 seconds for the service
-to restart. Then report the status or timeout. 
+<dd>if the service is running, send it the <i>term</i>
+and <i>cont</i> commands, and wait up to 7 seconds for the service to restart.
+Then report the status or timeout. 
 <p> </dd>
 </dl>
 
@@ -139,14 +140,14 @@ to restart. Then report the status or timeout.
 
 <dl>
 
-<dt><b>check</b>
-</dt>
-<dd>Check for the service to be in the state that&rsquo;s been requested. Wait up to
-7 seconds for the service to reach the requested state, then report the
-status or timeout. If the requested state of the service is <i>up</i>, and the
-script <i>./check</i> exists in the service directory, <b>sv</b> runs this script to check
-whether the service is up and running; it&rsquo;s considered to be up if <i>./check</i>
-exits with 0. </dd>
+<dt><b>check</b> </dt>
+<dd>Check for the
+service to be in the state that&rsquo;s been requested (up, down, or exit). Wait
+up to 7 seconds for the service to reach the requested state, then report
+the status or timeout. If the requested state of the service is <i>up</i>, and
+the script <i>./check</i> exists in the service directory, <b>sv</b> runs this script
+to check whether the service is up and running; it&rsquo;s considered to be up
+if <i>./check</i> exits with 0. </dd>
 </dl>
 
 <h2><a name='sect6'>Options</a></h2>
@@ -154,13 +155,13 @@ exits with 0. </dd>
 <dl>
 
 <dt><b>-v</b> </dt>
-<dd>If the <i>command</i> is up, down, term, once, cont, or
-exit, then wait up to 7 seconds for the command to take effect. Then report
-the status or timeout. </dd>
+<dd>If the <i>command</i> is up, down, term, once,
+cont, or exit, then wait up to 7 seconds for the command to take effect.
+Then report the status or timeout. </dd>
 
 <dt><b>-w <i>sec</b> </i></dt>
-<dd>Override the default timeout of 7 seconds with
-<i>sec</i> seconds. This option implies <i>-v</i>. </dd>
+<dd>Override the default timeout of
+7 seconds with <i>sec</i> seconds. This option implies <i>-v</i>. </dd>
 </dl>
 
 <h2><a name='sect7'>Environment</a></h2>
@@ -168,31 +169,34 @@ the status or timeout. </dd>
 <dl>
 
 <dt><b>SVDIR</b> </dt>
-<dd>The environment variable
-$SVDIR overrides the default services directory <i>/service/</i>. </dd>
-
-<dt><b>SVWAIT</b> </dt>
 <dd>The environment
-variable $SVWAIT overrides the default 7 seconds to wait for a command
-to take effect. It is overridden by the -w option. </dd>
+variable $SVDIR overrides the default services directory <i>/service/</i>. </dd>
+
+<dt><b>SVWAIT</b>
+</dt>
+<dd>The environment variable $SVWAIT overrides the default 7 seconds to wait
+for a command to take effect. It is overridden by the -w option. </dd>
 </dl>
 
 <h2><a name='sect8'>Exit Codes</a></h2>
-<b>sv</b> exits 0, if
-the <i>command</i> was successfully sent to all <i>services</i>, and, if it was told
-to wait, the <i>command</i> has taken effect to all services. <p>
-For each <i>service</i>
-that caused an error (e.g. the directory is not controlled by a <i><b>runsv</b>(8)</i>
-process, or <b>sv</b> timed out while waiting), <b>sv</b> increases the exit code by
-one and exits non zero. The maximum is 99. <b>sv</b> exits 100 on error. <p>
-If <b>sv</b> is
-called with a base name other than <b>sv</b>: it exits 1 on timeout or trouble
-sending the command; if the <i>command</i> is <b>status</b>, it exits 3 if the service
-is down, and 4 if the status is unknown; it exits 2 on wrong usage, and
-151 on error. 
+<b>sv</b>
+exits 0, if the <i>command</i> was successfully sent to all <i>services</i>, and, if
+it was told to wait, the <i>command</i> has taken effect to all <i>services</i>. <p>
+For each
+<i>service</i> that caused an error (e.g. the directory is not controlled by a <i><b>runsv</b>(8)</i>
+process) <b>sv</b> increases the exit code by one and exits non zero. The maximum
+is 99. <p>
+If <b>sv</b> runs into a timeout while waiting for the <i>command</i> to take effect
+to one or more <i>services</i>, it exits 111. <p>
+<b>sv</b> exits 100 on error. <p>
+If <b>sv</b> is called
+with a base name other than <b>sv</b>: it exits 1 on timeout or trouble sending
+the command; if the <i>command</i> is <b>status</b>, it exits 3 if the service is down,
+and 4 if the status is unknown; it exits 2 on wrong usage, and 151 on error.
+
 <h2><a name='sect9'>See Also</a></h2>
-<i>runsv(8)</i>, <i>chpst(8)</i>, <i>svlogd(8)</i>, <i>runsvdir(8)</i>, <i>runsvchdir(8)</i>,
-<i>runit(8)</i>, <i>runit-init(8)</i> <p>
+<i>runsv(8)</i>, <i>chpst(8)</i>, <i>svlogd(8)</i>, <i>runsvdir(8)</i>, <i>runsvchdir(8)</i>, <i>runit(8)</i>,
+<i>runit-init(8)</i> <p>
 <i>http://smarden.org/runit/</i> 
 <h2><a name='sect10'>Author</a></h2>
 Gerrit Pape &lt;pape@smarden.org&gt;
